Fix incorrectly closed spans in playlist.html. 	Add right padding to browsedbListItem to force text to wrap prior to overlapping controls. 	Remove homeMenuHeader class in favor of contextual selectors in the css. 	Make currentListItem into an id.
git-svn-id: file:///home/awy/mirror/slim/trunk/server@5615 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -60,7 +60,7 @@ a:hover {
 	left: 9px;
 }
 
-.homeMenuHeader, #playingStatus, #currentPlaylistLabel {
+.homeMenuSection div, #playingStatus, #currentPlaylistLabel {
 	color: #737373;
 }
 
@@ -304,7 +304,7 @@ div#homeMenu {
 }
 
 .songInfo ul {
-	/* the list of home menu items */
+	/* the list of song info items */
 	background-color: #ffffff;
 	padding: 0;
 	list-style: none;
@@ -335,18 +335,16 @@ div#homeMenu {
 .browsedbListItem {
 	position: relative;
 	padding: 6px;
+	padding-right: 65px;
 }
 
-.currentListItem {
-	position: relative;
-	padding: 6px;
+#currentListItem {
 	border: 1px solid #888;
 }
 
 .browsedbControls {
 	position: absolute;
-	top: 0px;
-	padding-top: 6px;
+	top: 6px;
 	right: 10px;
 }
 
